# qc_notebooklm

./: .env.example  podcast_batch.py  pyproject.toml  readme.md
agents/: __init__.py  index.py
assets/podresult/: output.srt
assets/subtitles/: out.srt  part2_1.srt  part2_2.srt  part2_3.srt  part2_4.srt  part2_5.srt  part2_6.srt  part2_7.srt  part8_1.srt  part8_10.srt  part8_11.srt  part8_12.srt  part8_13.srt  part8_14.srt  part8_15.srt  part8_16.srt  part8_17.srt  part8_18.srt  part8_19.srt  part8_2.srt  part8_20.srt  part8_21.srt  part8_22.srt  part8_3.srt  part8_4.srt  part8_5.srt  part8_6.srt  part8_7.srt  part8_8.srt  part8_9.srt
doc/: part1.txt  part8.txt
gen_media/: __init__.py  gather_audios.py  gather_videos.py  gen_audio.py  gen_audio_bark.py  gen_audio_parler.py  gen_img.py  gen_img_302.py  gen_subtitle.py  gen_video.py
pdf_handle/: __init__.py  index.py
prompts/: __init__.py  instruments.py  prompts.py
